--- a/css/main.css
+++ b/css/main.css
@@ -285,3 +285,111 @@ button.depth:active {
     0 0 2px 2px hsla(0, 0%, 0%, 0.2), 0 0 2px 4px hsla(0, 0%, 0%, 0.2), 0 0 2px 6px hsla(0, 0%, 0%, 0.2), 0 0 2px 8px hsla(0, 0%, 0%, 0.5), 0 1px 2px 8px hsla(0, 0%, 100%, 0.25), 0 -1px 2px 8px hsla(0, 0%, 0%, 0.5);
   line-height: 86px;
 }
+
+
+/*region GAME SCREEN*/
+
+.hiddenItem{
+  display: none !important;
+  visibility: collapse !important;;
+  pointer-events: none !important;;
+}
+
+#gameScreen{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100000;
+  background: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/*region top game screen*/
+#topGameScreen{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  top: 0;
+  width: 100%;
+  height: 50px;
+}
+#topGameScreen > *{
+  flex : 1 1;
+}
+#timer{
+  text-align: center;
+}
+
+.progressBar{
+  border: grey 2px solid;
+  border-radius: 20px;
+  height: 25px;
+}
+.progressBar > *{
+  background: limegreen;
+  height: 100%;
+  transition:width .8s ease-in-out;
+  text-align: center;
+  border-radius: 20px;
+  color: black;
+}
+/*endregion top game screen*/
+
+
+#bottomGameScreen{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  height: 50px;
+}
+
+
+/*region center game screeen*/
+#centerGameScreen{
+  background: grey;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#centerGameDifficulty{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.difficultySelect{
+  background: greenyellow;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 5px;
+  width: 100%;
+  text-align: center;
+  color: black;
+}
+
+#centerGameEmotion{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#centerGameEmotion > *{
+  flex: 1 1;
+  height: 100%;
+}
+/*endregion center game screeen*/
+
+/*endregion GAME SCREEN*/
